--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <header>
         nop
     </header>
+    <div class="slider">
+        <h1>slide 1</h1>
+        <h1>slide 2</h1>
+    </div>
 </body>
 </html>
