--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        header
+    </header>
+    <div class="banner">
+        <img src="banner.jng" alt="">
+    </div>
     <h1>hello git</h1>
+
 </body>
 </html>
