--- a/index.html
+++ b/index.html
@@ -8,19 +8,16 @@
 </head>
 <body>
     <header>
-<<<<<<< HEAD
-        nop
+       my header
     </header>
     <div class="slider">
         <h1>slide 1</h1>
         <h1>slide 2</h1>
-        <h1>slide 3</h1>
     </div>
     <footer>
         all rights are reserved
     </footer>
     <script src="script.js"></script>
-=======
         header
     </header>
     <div class="banner">
@@ -28,6 +25,5 @@
     </div>
     <h1>hello git</h1>
 
->>>>>>> dev
 </body>
 </html>
