some changes in master branch

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <header>
-<<<<<<< HEAD
-        nop
+        new header
     </header>
     <div class="slider">
         <h1>slide 1</h1>
@@ -17,10 +16,9 @@
         <h1>slide 3</h1>
     </div>
     <footer>
-        all rights are reserved
+        all rights are reserved 2020
     </footer>
     <script src="script.js"></script>
-=======
         header
     </header>
     <div class="banner">
@@ -28,6 +26,5 @@
     </div>
     <h1>hello git</h1>
 
->>>>>>> dev
 </body>
 </html>
