slide three added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="slider">
         <h1>slide 1</h1>
         <h1>slide 2</h1>
+        <h1>slide 3</h1>
     </div>
     <footer>
         all rights are reserved 2020
